# Aeternum

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt
Orinoco/: CMakeLists.txt
Orinoco/src/: Orinoco.cpp  Orinoco.h
